fix sidebar gap at bottom

--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,14 @@ body {
     padding: 0;
     background-color: #e0ecee;
     font-family: 'Roboto',sans-serif;
-    width: 100vw;
     height: 100vh;
 }
 
 .container {
+    min-height: 100%;
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
-    grid-template-rows: 1fr 3fr 1fr;
+    grid-template-columns: 250px 4fr minmax(250px,1fr);
+    grid-template-rows: 150px 3fr 1fr;
 }
 
 header {
@@ -29,10 +29,24 @@ header {
     grid-area: search-bar;
 }
 
-.wecome-message {
+.welcome-message {
     grid-area: welcome-message;
 }
+.user-name {
+    font-family: 'Covered By Your Grace', sans-serif;
+    font-size: 2rem;
+}
+.page-title {
+    font-weight: bold;
+    font-size: 2rem;
+    color: white;
+}
 
+.team-name {
+    font-family: 'Covered By Your Grace', sans-serif;
+    font-size: 2rem;
+    color: gold;
+}
 .user-badge {
     grid-area: user-badge;
     justify-self:end;
@@ -45,15 +59,20 @@ header {
 }
 
 .sidebar {
-    background-color: lightcoral;
+    padding: 1rem;
+    background-color: purple;
     grid-column-start: 1;
-    grid-row: 1 / span 3;
+    grid-row: 1 / -1;
 }
 
 .card {
     background-color: white;
     box-shadow: 2px 2px 5px #777;
     border-radius: 5px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 main, .right-sidebar {
@@ -73,16 +92,10 @@ main {
 .right-sidebar {
     grid-column-start: 3;
     grid-row: 2/span 2;
-
 }
 
 .main-card {
-    display: grid;
-    text-align: center;
-    grid-template-columns: 1fr 20fr;
-    grid-template-rows: 1fr;
-    background-color: purple;
-    /*height: 200px;*/
+    border-left: 15px solid purple;
 }
 
 .card-content {
@@ -102,4 +115,14 @@ main {
 .right-sidebar-item-header {
     font-weight: bold;
     margin-top: 1rem;
+}
+
+.right-sidebar-header {
+    font-family: "Covered By Your Grace";
+    font-size: 2rem;
+}
+
+.player-name {
+    font-family: "Covered By Your Grace";
+    font-weight: normal;
 }
